--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,11 @@ markdown:       kramdown
 include:
   - _pages
 
+  # collections:
+  # blog:
+  #  output: true
+  #  permalink: /blog/:categories/:year/:month/:day/:title.html
+
 # Assets
 sass:
   sass_dir:     /assets/css/_sass
@@ -34,8 +39,10 @@ plugins:
   - jekyll-last-modified-at
 
 # Permalinks
-permalink:      /:title
+# permalink:      /:title
+permalink: pretty
 paginate:       5
+paginate_path: "/blog/page:num"
 
 # Excludes
 exclude:
