--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ include:
 # Assets
 sass:
   sass_dir:     /assets/css/_sass
-  style:        compressed
+  # style:        compressed
 
 # Gems
 plugins:
