--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title:         GRID 
-description:    "საიტი Jekyll პროექტზე Grig ტექნოლოგიით"
+description:    "ᲡᲞᲔᲪᲘᲤᲘᲙᲐᲪᲘᲘᲡ ᲪᲜᲝᲑᲐᲠᲘ"
 baseurl: 
 url: 
 
